Thêm tình trạng sách, trả sách

--- a/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/WindowSuaPhieuMuon.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/WindowSuaPhieuMuon.xaml
@@ -20,6 +20,7 @@
         <CV:GioiTinhConverter x:Key="GioiTinhConverter" />
         <CV:DateConverter x:Key="DateConverter" />
         <CV:KTDuSoLuongSachKhiSua x:Key="KTDuSoLuongSachKhiSua" />
+        <CV:TinhTrangPhieuMuonConverter x:Key="TinhTrangPhieuMuonConverter" />
     </Window.Resources>
     <Grid Margin="0,0,0,0">
         <Grid.Background>
@@ -99,6 +100,13 @@
                         <StackPanel Orientation="Horizontal">
                             <Label
                                 Width="80"
+                                Content="Mã phiếu"
+                                FontWeight="Bold" />
+                            <Label x:Name="lb_MaPhieuMuon" Content="{Binding pid}" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label
+                                Width="80"
                                 Content="Ngày mượn"
                                 FontWeight="Bold" />
                             <Label x:Name="lb_NgayMuon" Content="{Binding NgayMuon, Converter={StaticResource DateConverter}, ConverterParameter=dd/MM/yyyy}" />
@@ -109,6 +117,13 @@
                                 Content="Ngày trả"
                                 FontWeight="Bold" />
                             <Label x:Name="lb_NgayTra" Content="{Binding HanTra, Converter={StaticResource DateConverter}, ConverterParameter=dd/MM/yyyy}" />
+                        </StackPanel>
+                        <StackPanel Orientation="Horizontal">
+                            <Label
+                                Width="80"
+                                Content="Tình trạng"
+                                FontWeight="Bold" />
+                            <Label x:Name="lb_TinhTrang" Content="{Binding TinhTrang, Converter={StaticResource TinhTrangPhieuMuonConverter}}" />
                         </StackPanel>
                         <Separator />
                         <StackPanel Margin="0,0,0,0" Orientation="Horizontal">
@@ -196,23 +211,47 @@
                 </StackPanel>
             </StackPanel>
         </Border>
-        <StackPanel
-            Grid.Row="2"
-            HorizontalAlignment="Right"
-            Orientation="Horizontal">
-            <Button
-                x:Name="btn_XacNhan"
-                Width="100"
-                Height="30"
-                Click="btn_XacNhan_Click"
-                Content="Xác nhận" />
-            <Button
-                x:Name="btn_HuyBo"
-                Width="100"
-                Height="30"
-                Margin="10,0,20,0"
-                Click="btn_HuyBo_Click"
-                Content="Hủy bỏ" />
-        </StackPanel>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <StackPanel
+                Grid.Column="0"
+                Margin="20,0,0,0"
+                Orientation="Horizontal">
+                <Button
+                    x:Name="btn_TraSach"
+                    Grid.Column="0"
+                    Width="100"
+                    Height="30"
+                    Click="btn_TraSach_Click"
+                    Content="Trả sách" />
+                <Button
+                    x:Name="btn_HuyTraSach"
+                    Grid.Column="0"
+                    Width="100"
+                    Height="30"
+                    Click="btn_HuyTraSach_Click"
+                    Content="Hủy trả sách" />
+            </StackPanel>
+
+            <StackPanel Grid.Column="2" Orientation="Horizontal">
+                <Button
+                    x:Name="btn_XacNhan"
+                    Width="100"
+                    Height="30"
+                    Click="btn_XacNhan_Click"
+                    Content="Xác nhận" />
+                <Button
+                    x:Name="btn_HuyBo"
+                    Width="100"
+                    Height="30"
+                    Margin="10,0,20,0"
+                    Click="btn_HuyBo_Click"
+                    Content="Hủy bỏ" />
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
