--- a/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/PageDSPhieuMuon.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/PageDSPhieuMuon.xaml
@@ -2,6 +2,7 @@
     x:Class="DACK_PTTKPM.PageDSPhieuMuon"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:CV="clr-namespace:DACK_PTTKPM.CV"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:DACK_PTTKPM"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,7 +10,9 @@
     d:DesignHeight="500"
     d:DesignWidth="800"
     mc:Ignorable="d">
-
+    <Page.Resources>
+        <CV:TinhTrangPhieuMuonConverter x:Key="TinhTrangPhieuMuonConverter" />
+    </Page.Resources>
     <Grid>
         <Grid.Background>
             <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
@@ -219,6 +222,10 @@
                             Width="150"
                             Binding="{Binding HanTra, StringFormat=dd/MM/yyyy}"
                             Header="Hạn trả" />
+                        <DataGridTextColumn
+                            Width="80"
+                            Binding="{Binding TinhTrang, Converter={StaticResource TinhTrangPhieuMuonConverter}}"
+                            Header="Tình trạng" />
                     </DataGrid.Columns>
                 </DataGrid>
             </Border>
