--- a/QuanLyThuVien/DACK-PTTKPM/_report/BaoCaoDocGiaViPham.rdlc
+++ b/QuanLyThuVien/DACK-PTTKPM/_report/BaoCaoDocGiaViPham.rdlc
@@ -21,7 +21,7 @@
               <Width>1.19792in</Width>
             </TablixColumn>
             <TablixColumn>
-              <Width>1.30208in</Width>
+              <Width>1.40625in</Width>
             </TablixColumn>
           </TablixColumns>
           <TablixRows>
@@ -202,6 +202,9 @@
                   <CellContents>
                     <Textbox Name="Textbox11">
                       <CanGrow>true</CanGrow>
+                      <UserSort>
+                        <SortExpression>=Fields!SoLanViPham.Value</SortExpression>
+                      </UserSort>
                       <KeepTogether>true</KeepTogether>
                       <Paragraphs>
                         <Paragraph>
@@ -454,7 +457,7 @@
         <DataSetName>DataSet_DocGiaViPham</DataSetName>
         <Top>0.61333in</Top>
         <Height>0.5in</Height>
-        <Width>7.21875in</Width>
+        <Width>7.32292in</Width>
         <Style>
           <Border>
             <Style>None</Style>
@@ -468,7 +471,7 @@
           <Paragraph>
             <TextRuns>
               <TextRun>
-                <Value>THỐNG KÊ ĐỘC GIẢ VI PHẠM</Value>
+                <Value>DANH SÁCH ĐỘC GIẢ VI PHẠM</Value>
                 <Style>
                   <FontSize>14pt</FontSize>
                   <FontWeight>Bold</FontWeight>
@@ -482,7 +485,7 @@
         <Top>0.12375in</Top>
         <Left>2.19667in</Left>
         <Height>0.33333in</Height>
-        <Width>2.95833in</Width>
+        <Width>3.03125in</Width>
         <ZIndex>1</ZIndex>
         <Style>
           <Border>
