--- a/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/PageDSPhieuMuon.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/PageDSPhieuMuon.xaml
@@ -7,7 +7,7 @@
     xmlns:local="clr-namespace:DACK_PTTKPM"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="PageDSPhieuMuon"
-    d:DesignHeight="500"
+    d:DesignHeight="645"
     d:DesignWidth="800"
     mc:Ignorable="d">
     <Page.Resources>
@@ -94,7 +94,7 @@
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_MaPhieuMuon"
+                                x:Name="lb_TT_MaPhieuMuon"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
@@ -108,7 +108,7 @@
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_MaDocgia"
+                                x:Name="lb_TT_MaDocgia"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
@@ -122,7 +122,7 @@
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_HoTenDocgia"
+                                x:Name="lb_TT_HoTenDocgia"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
@@ -136,7 +136,7 @@
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_MaNguoiLap"
+                                x:Name="lb_TT_MaNguoiLap"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
@@ -150,7 +150,21 @@
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_HoTenNguoiLap"
+                                x:Name="lb_TT_HoTenNguoiLap"
+                                Content=""
+                                FontWeight="Bold" />
+                        </StackPanel>
+                        <StackPanel
+                            Height="25"
+                            Margin="0,5,0,0"
+                            Orientation="Horizontal">
+                            <Label
+                                Width="120"
+                                Content="Tình trạng:"
+                                FontWeight="Bold"
+                                Foreground="Red" />
+                            <Label
+                                x:Name="lb_TT_TinhTrang"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
@@ -164,7 +178,7 @@
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_NgayMuon"
+                                x:Name="lb_TT_NgayMuon"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
@@ -178,7 +192,7 @@
                                 FontWeight="Bold"
                                 Foreground="Red" />
                             <Label
-                                x:Name="lb_KQTK_HanTra"
+                                x:Name="lb_TT_HanTra"
                                 Content=""
                                 FontWeight="Bold" />
                         </StackPanel>
