--- a/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/PageDSPhieuMuon.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qlsachmuontra/PageDSPhieuMuon.xaml
@@ -47,31 +47,26 @@
                 BorderBrush="#B9C9DA"
                 BorderThickness="0,2,2,0">
                 <StackPanel Margin="20,10,20,10" Orientation="Vertical">
-                    <Label Content="Tìm kiếm theo mã phiếu mượn" FontWeight="Bold" />
-                    <TextBox
-                        x:Name="tb_TimKiemMaPhieuMuon"
-                        Margin="20,5,0,0"
-                        Text="Nhập mã độc giả tìm kiếm" />
-                    <Label
+                    <RadioButton
+                        x:Name="rd_TimKiemPhieuTheoMaPhieu"
+                        Content="Tìm kiếm theo mã phiếu"
+                        FontWeight="Bold"
+                        GroupName="rdGroup_TimKiemPhieu"
+                        IsChecked="True" />
+                    <TextBox x:Name="tb_TimKiemPhieuTheoMaPhieu" Margin="20,5,0,0" />
+                    <RadioButton
+                        x:Name="rd_TimKiemPhieuTheoMaDocGia"
                         Margin="0,15,0,0"
-                        Content="Tìm kiếm theo độc giả"
-                        FontWeight="bold" />
-                    <TextBox
-                        x:Name="tb_TimKiemTenDocGia"
-                        Margin="20,5,0,0"
-                        Text="Nhập mã độc giả tìm kiếm" />
-                    <Label
-                        Margin="0,15,0,0"
-                        Content="Tìm kiếm theo người lập phiếu"
-                        FontWeight="bold" />
-                    <TextBox
-                        x:Name="tb_TimKiemTenNguoiLapPhieu"
-                        Margin="20,5,0,0"
-                        Text="Nhập mã người lập phiếu tìm kiếm" />
+                        Content="Tìm kiếm theo mã độc giả"
+                        FontWeight="bold"
+                        GroupName="rdGroup_TimKiemPhieu" />
+                    <TextBox x:Name="tb_TimKiemPhieuTheoMaDocGia" Margin="20,5,0,0" />
                     <Button
-                        x:Name="btn_TimKiemPhieuMuon"
+                        x:Name="btn_TimKiemPhieu"
+                        Width="100"
                         Height="25"
-                        Margin="40,10,40,0"
+                        Margin="8"
+                        Click="btn_TimKiemPhieu_Click"
                         Content="Tìm kiếm" />
                 </StackPanel>
             </Border>
