--- a/QuanLyThuVien/DACK-PTTKPM/App.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/App.xaml
@@ -1,9 +1,8 @@
-﻿<Application x:Class="DACK_PTTKPM.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:DACK_PTTKPM"
-             StartupUri="MainWindow.xaml">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<Application
+    x:Class="DACK_PTTKPM.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:DACK_PTTKPM"
+    StartupUri="_dangnhap/WindowDangNhap.xaml">
+    <Application.Resources />
 </Application>
