--- a/QuanLyThuVien/DACK-PTTKPM/_qldocgia/WindowSuaDocGia.xaml
+++ b/QuanLyThuVien/DACK-PTTKPM/_qldocgia/WindowSuaDocGia.xaml
@@ -1,12 +1,17 @@
-﻿<Window x:Class="DACK_PTTKPM.WindowSuaDocGia"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DACK_PTTKPM"
-        mc:Ignorable="d"
-        Loaded="Window_Loaded"
-        Title="Sửa thông tin độc giả" Height="380" Width="480">
+﻿<Window
+    x:Class="DACK_PTTKPM.WindowSuaDocGia"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:DACK_PTTKPM"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="Sửa thông tin độc giả"
+    Width="480"
+    Height="380"
+    Loaded="Window_Loaded"
+    ResizeMode="NoResize"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
     <Grid Margin="0,0,0,0">
         <Grid.Background>
             <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
@@ -46,8 +51,8 @@
                         Width="300"
                         Height="22"
                         Margin="0,3,0,0"
-                        HorizontalAlignment="Left" 
-                        IsEnabled="False"/>
+                        HorizontalAlignment="Left"
+                        IsEnabled="False" />
                 </StackPanel>
                 <StackPanel
                     x:Name="panel_Error_MaSoDocGia"
@@ -100,8 +105,17 @@
                         Margin="0,0,0,0"
                         Content="Giới tính"
                         FontWeight="Bold" />
-                    <RadioButton x:Name="rd_GioiTinhNam" GroupName="rd_GioiTinh" Content="Nam" Margin="0,5,35,0" IsChecked="True"/>
-                    <RadioButton x:Name="rd_GioiTinhNu" GroupName="rd_GioiTinh" Content="Nữ"  Margin="0,5" />
+                    <RadioButton
+                        x:Name="rd_GioiTinhNam"
+                        Margin="0,5,35,0"
+                        Content="Nam"
+                        GroupName="rd_GioiTinh"
+                        IsChecked="True" />
+                    <RadioButton
+                        x:Name="rd_GioiTinhNu"
+                        Margin="0,5"
+                        Content="Nữ"
+                        GroupName="rd_GioiTinh" />
                 </StackPanel>
                 <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
                     <Label
@@ -109,7 +123,11 @@
                         Margin="0,0,0,0"
                         Content="Ngày sinh"
                         FontWeight="Bold" />
-                    <DatePicker x:Name="dpicker_NgaySinh" Width="120" FontWeight="Bold" Text="1/04/1990"/>
+                    <DatePicker
+                        x:Name="dpicker_NgaySinh"
+                        Width="120"
+                        FontWeight="Bold"
+                        Text="1/04/1990" />
                 </StackPanel>
                 <StackPanel Margin="0,4,0,4" Orientation="Horizontal">
                     <Label
@@ -117,7 +135,11 @@
                         Margin="0,0,0,0"
                         Content="Ngày mở thẻ"
                         FontWeight="Bold" />
-                    <DatePicker x:Name="dpicker_NgayMoThe" Width="120" FontWeight="Bold" IsHitTestVisible="False"/>
+                    <DatePicker
+                        x:Name="dpicker_NgayMoThe"
+                        Width="120"
+                        FontWeight="Bold"
+                        IsHitTestVisible="False" />
                 </StackPanel>
             </StackPanel>
         </Border>
@@ -129,8 +151,8 @@
                 x:Name="btn_XacNhan"
                 Width="100"
                 Height="30"
-                Content="Xác nhận"
-                Click="btn_XacNhan_Click"/>
+                Click="btn_XacNhan_Click"
+                Content="Xác nhận" />
             <Button
                 x:Name="btn_HuyBo"
                 Width="100"
